fixed abot page to align elements

--- a/surrealism/styles.css
+++ b/surrealism/styles.css
@@ -66,7 +66,11 @@ div {
 .flex {
 	display:flex;
 	flex-wrap:wrap;
-	justify-content: center;
+	justify-content: flex-end;
+}
+
+.flex img, .flex header {
+	margin-left:10px;
 }
 
 .level {
